NetBSD Problem Report #43071

From www@NetBSD.org  Sun Mar 28 18:03:24 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7202863B873
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 28 Mar 2010 18:03:24 +0000 (UTC)
Message-Id: <20100328180324.393FA63B11D@www.NetBSD.org>
Date: Sun, 28 Mar 2010 18:03:24 +0000 (UTC)
From: uwe@6bone.informatik.uni-leipzig.de
Reply-To: uwe@6bone.informatik.uni-leipzig.de
To: gnats-bugs@NetBSD.org
Subject: IPSec doesn't work with link-local addresses 
X-Send-Pr-Version: www-1.0

>Number:         43071
>Category:       kern
>Synopsis:       IPSec doesn't work with link-local addresses
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Mar 28 18:05:00 +0000 2010
>Closed-Date:    Sat Feb 10 08:31:44 +0000 2018
>Last-Modified:  Sat Feb 10 08:31:44 +0000 2018
>Originator:     Uwe Toenjes
>Release:        NetBSD 5.0_STABLE
>Organization:
University of Leipzig
>Environment:
NetBSD gate.ipv6.uni-leipzig.de 5.0_STABLE NetBSD 5.0_STABLE (MYCONF) #2: Sun Mar 28 13:56:07 CEST 2010  root@gate.ipv6.uni-leipzig.de:/usr/obj/sys/arch/amd64/compile/MYCONF amd64
>Description:
IPSec doesn't work with link-local addresses.
>How-To-Repeat:
Try to use IPsec with IPv6 link-local addresses.
>Fix:
There is a workaround for freebsd available. It seems that a modification of the patch could solve the problem for netbsd too.

http://lists.freebsd.org/pipermail/freebsd-bugs/2010-January/038113.html

>Release-Note:

>Audit-Trail:
From: "Matthias Drochner" <drochner@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43071 CVS commit: src/sys/netipsec
Date: Fri, 18 Feb 2011 16:10:11 +0000

 Module Name:	src
 Committed By:	drochner
 Date:		Fri Feb 18 16:10:11 UTC 2011

 Modified Files:
 	src/sys/netipsec: ipsec_input.c

 Log Message:
 deal with IPv6 address scope, so that SA lookup for
 link-local addresses works
 (PR kern/43071 is related, but refers to KAME IPSEC)


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/sys/netipsec/ipsec_input.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: maxv@NetBSD.org
State-Changed-When: Sat, 10 Feb 2018 08:31:44 +0000
State-Changed-Why:
This issue was fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.