deal with IPv6 address scope, so that SA lookup for link-local addresses works (PR kern/43071 is related, but refers to KAME IPSEC)